Cleanup index.html

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 {
-"apiVersion":"${apiVersion}",
 "discord": "https://discord.gg/pbwnMwnUD6",
-"docs": "https://github.com/fStats/fstats-backend/blob/main/README.md",
+"documentation": "https://github.com/fStats/fstats-backend/blob/main/README.md",
+"issues": "https://github.com/fStats/fstats-backend/issues",
 "source": "https://github.com/fStats/fstats-backend",
-"issues": "https://github.com/fStats/fstats-backend/issues"
+"version": "${version}"
 }
 </body>
 </html>
