--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta content="application/json">
     <title>fStats API</title>
 </head>
 <body>
