--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -8,7 +8,7 @@
 <body>
 {
 "discord": "https://discord.gg/pbwnMwnUD6",
-"documentation": "https://github.com/fStats/fstats-backend/blob/main/README.md",
+"documentation": "https://api.fstats.dev/swagger",
 "issues": "https://github.com/fStats/fstats-backend/issues",
 "source": "https://github.com/fStats/fstats-backend",
 "version": "${version}"
